--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@types/uuid": "^8.3.3",
-    "react": "17.0.1",
-    "react-native": "0.64.1",
     "react-native-device-info": "^8.1.7",
     "react-native-get-random-values": "^1.7.1",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native": "0.64.1",
     "react-redux": "^7.2.4",
+    "react": "17.0.1",
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
     "txtgen": "^2.2.8",
@@ -42,6 +43,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux-thunk": "^2.1.0",
@@ -54,8 +56,8 @@
     "moment": "^2.29.1",
     "react-test-renderer": "17.0.1",
     "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
+    "reactotron-redux": "^3.1.3",
     "typescript": "^4.3.5"
   },
   "resolutions": {
